most emojis ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
 /src/.env
+/src/db.json
 /node_modules
-.deta
+
+# leave some emoji for tests
+/src/emoji/*
+!/src/emoji/1f300.png
+!/src/emoji/1f301.png
+!/src/emoji/1f302.png
+!/src/emoji/1f303.png
+!/src/emoji/1f304.png
+!/src/emoji/1f305.png
+!/src/emoji/1f306.png
+!/src/emoji/1f307.png
+!/src/emoji/1f308.png
+!/src/emoji/1f309.png
+!/src/emoji/1f30b.png
+!/src/emoji/1f30c.png
+!/src/emoji/1f30d.png
+!/src/emoji/1f30e.png
+!/src/emoji/1f30f.png
+!/src/emoji/1f310.png
+!/src/emoji/1f311.png
+!/src/emoji/1f312.png
+!/src/emoji/1f313.png
+!/src/emoji/1f314.png
+!/src/emoji/1f315.png
+!/src/emoji/1f316.png
+!/src/emoji/1f317.png
+!/src/emoji/1f318.png
+!/src/emoji/1f319.png
+!/src/emoji/1f31a.png
+!/src/emoji/1f31b.png
+!/src/emoji/1f31c.png
+!/src/emoji/1f31d.png
+!/src/emoji/1f31e.png
+!/src/emoji/1f31f.png
+!/src/emoji/1f320.png
+!/src/emoji/1f321-fe0f.png
+!/src/emoji/1f324-fe0f.png
+!/src/emoji/1f325-fe0f.png
+!/src/emoji/1f326-fe0f.png
+!/src/emoji/1f327-fe0f.png
+!/src/emoji/1f328-fe0f.png
+!/src/emoji/1f329-fe0f.png
+!/src/emoji/1f32a-fe0f.png
+!/src/emoji/1f32b-fe0f.png
+!/src/emoji/1f32c-fe0f.png
+!/src/emoji/1f32d.png
+!/src/emoji/1f32e.png
+!/src/emoji/1f32f.png
+!/src/emoji/1f330.png
+!/src/emoji/1f331.png
+!/src/emoji/1f332.png
+!/src/emoji/1f333.png
+!/src/emoji/1f334.png
+!/src/emoji/1f335.png
+!/src/emoji/1f336-fe0f.png
