--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lowdb-node": "^3.0.2",
     "skia-canvas": "^0.9.30",
     "telegraf": "^4.8.5"
   }
