--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/mikhailsdv/emoji-letters-bot#readme",
   "dependencies": {
+    "canvas": "^2.9.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lowdb-node": "^3.0.2",
-    "skia-canvas": "^0.9.30",
     "telegraf": "^4.8.5"
   }
 }
